# Qt-Graphics

./: .gitignore  CMakeLists.txt  Common.pri  Qt-Graphics.pro  README.en.md  README.md  common.pri  libs.pri  vcpkg.json
.github/: dependabot.yml
app/: CMakeLists.txt  app.pro  main.cpp  resource.qrc
crashhandler/: CMakeLists.txt  breakpad.cc  breakpad.hpp  crashhandler.pro  crashhandler_global.h
examples/graphics/: CMakeLists.txt  capturewidget.cc  customlineitem.cc  customlineitem.hpp  drawscene.cc  drawscene.hpp  drawwidget.cpp  drawwidget.h  graphics.pro  icoconverterwidget.cc  icoconverterwidget.hpp  imagecaptureview.cc  imageviewer.cpp  imageviewer.h  listiitemview.cc  listiitemview.hpp  main.cpp  mainwindow.cpp  mainwindow.h  maskdialog.cpp  multiimagefileviewer.cc  multiimagefileviewer.hpp  openglviewer.cc  openglviewer.hpp  recordgifthread.cc  recordgifthread.hpp  recordwidget.cc  rounddialog.cc  rounddialog.hpp  sectionalsubtitlesview.cc  sectionalsubtitlesview.hpp  selectionwidget.cc  selectionwidget.hpp  sizeselectorwidget.cc  sizeselectorwidget.hpp  stretchparamssettingdailog.cc  stretchparamssettingdailog.hpp  subtitledividerlineitem.cc  subtitledividerlineitem.hpp  subtitlsplicingwidget.cc  (+3 more)
examples/opencvtools/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.hpp  opencvtools.pro  opencvwidget.cc  opencvwidget.hpp
examples/rhiviewer/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.hpp  rhiviewer.cc  rhiviewer.hpp  rhiviewer.pro
gpugraphics/: CMakeLists.txt  gpugraphics.pro  gpugraphics_global.hpp  openglshaderprogram.cc  openglview.cc  openglview.hpp  shader.qrc  vulkanview.hpp
gpugraphics/shader/: texture.frag  texture.vert
graphics/: CMakeLists.txt  basicgraphicsitem.cpp  basicgraphicsitem.h  graphics.cpp  graphics.h  graphics.pro  graphics_global.h  graphicsarcitem.cpp  graphicsarcitem.h  graphicscircleitem.cpp  graphicscircleitem.h  graphicslineitem.cpp  graphicslineitem.h  graphicspixmapitem.cpp  graphicspixmapitem.h  graphicspolygonitem.cpp  graphicspolygonitem.h  graphicsrectitem.cpp  graphicsrectitem.h  graphicsringitem.cpp  graphicsringitem.h  graphicsrotatedrectitem.cpp  graphicsrotatedrectitem.h  graphicstextitem.cc  graphicstextitem.hpp  imageview.cpp  imageview.h
mainwindow/: CMakeLists.txt  capturewidget.cc  capturewidget.hpp  customlineitem.cc  customlineitem.hpp  drawwidget.cpp  drawwidget.h  imagecaptureview.cc  imagecaptureview.hpp  imagelistmodel.cpp  imagelistmodel.h  imageviewer.cpp  imageviewer.h  listiitemview.cc  listiitemview.hpp  mainwindow.cpp  mainwindow.h  mainwindow.pro  mainwindow_global.h  maskdialog.cpp  maskdialog.h  openglviewer.cc  openglviewer.hpp  recordgifthread.cc  recordgifthread.hpp  recordwidget.cc  recordwidget.hpp  rounddialog.cc  rounddialog.hpp  sectionalsubtitlesview.cc  sectionalsubtitlesview.hpp  selectionwidget.cc  selectionwidget.hpp  stretchparamssettingdailog.cc  stretchparamssettingdailog.hpp  subtitlsplicingwidget.cc  subtitlsplicingwidget.hpp  validator.cc  validator.hpp  viewer.cc  (+1 more)
openglgraphics/: CMakeLists.txt  openglgraphics.pro  openglgraphics_global.hpp  openglview.cc  openglview.hpp  shader.qrc
openglgraphics/shader/: texture.fs  texture.vs
src/dump/: CMakeLists.txt  breakpad.cc  breakpad.hpp  crashpad.cc  crashpad.hpp  dump.pro  dump_global.hpp
src/gpugraphics/: CMakeLists.txt  gpudata.cc  gpudata.hpp  gpugraphics.pro  gpustr.hpp  openglshaderprogram.cc  openglshaderprogram.hpp  openglview.cc  openglview.hpp  rhiview.cc  rhiview.hpp  shader.qrc  vulkanrenderer.cc  vulkanrenderer.hpp  vulkanview.cc  vulkanview.hpp
src/gpugraphics/shader/: complie_qsb.ps1  texture.frag  texture.vert  vulkan.frag  vulkan.frag.qsb  vulkan.vert  vulkan.vert.qsb
src/graphics/: CMakeLists.txt  basicgraphicsitem.cpp  basicgraphicsitem.h  geometrycache.cc  geometrycache.hpp  graphics.cpp  graphics.h  graphics.pro  graphicsarcitem.cpp  graphicsarcitem.h  graphicsbasicitem.cpp  graphicsbasicitem.h  graphicscircleitem.cpp  graphicscircleitem.h  graphicslineitem.cpp  graphicslineitem.h  graphicspixmapitem.cpp  graphicspixmapitem.h  graphicspolygonitem.cpp  graphicspolygonitem.h  graphicsrectitem.cpp  graphicsrectitem.h  graphicsringitem.cpp  graphicsringitem.h  graphicsrotatedrectitem.cpp  graphicsrotatedrectitem.h  graphicsroundedrectitem.cc  graphicsroundedrectitem.hpp  graphicstextitem.hpp  graphicsutils.cc  graphicsutils.hpp  graphicsview.cc  graphicsview.hpp  imageview.cpp
src/qfreeimage/: CMakeLists.txt  freeimageutils.cc  freeimageutils.hpp  qfreeimage.pro  qfreeimage_global.hpp
src/qopencv/: CMakeLists.txt  opencvobject.cc  opencvobject.hpp  opencvutils.cc  opencvutils.hpp  qopencv.cc  qopencv.hpp  qopencv.pro  qopencv_global.hpp
src/qopencv/edgedetection/: canny.cc  canny.hpp  edgedetection.cc  edgedetection.hpp  edgedetection.pri  laplacian.cc  laplacian.hpp  scharr.cc  scharr.hpp  sobel.cc  sobel.hpp
src/qopencv/enhancement/: bilateralfilter.cc  bilateralfilter.hpp  dehazed.cc  dehazed.hpp  enhancement.cc  enhancement.hpp  enhancement.pri  gammacorrection.cc  gammacorrection.hpp  gaussianblur.cc  gaussianblur.hpp  histogramequalization.cc  histogramequalization.hpp  linearcontrast.cc  linearcontrast.hpp  logtransformation.cc  logtransformation.hpp  medianblur.cc  medianblur.hpp  sharpen.cc  sharpen.hpp  superresolution.cc  superresolution.hpp
src/qopencv/filter/: bilateralfilter.cc  bilateralfilter.hpp  blur.cc  blur.hpp  boxfilter.cc  boxfilter.hpp  filter.cc  filter.hpp  filter.pri  gaussianblur.cc  gaussianblur.hpp  medianblur.cc  medianblur.hpp
src/utils/: CMakeLists.txt  appdata.hpp  expected.h  hostosinfo.cpp  hostosinfo.h  icowriter.cc  icowriter.hpp  imagecache.cc  imagecache.hpp  logasync.cpp  logasync.h  logfile.cc  logfile.hpp  osspecificaspects.h  qtcassert.h  result.h  singleton.hpp  threadutils.h  utils.cc  utils.cpp  utils.h  utils.hpp  utils.pro  utilstr.h  validator.cc  validator.hpp
utils/: CMakeLists.txt  hostosinfo.cpp  hostosinfo.h  logasync.cpp  logasync.h  osspecificaspects.h  singleton.hpp  taskqueue.h  utils.cpp  utils.h  utils.pro  utils_global.h
(+41 files in other folders)
